k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
    version: blue
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3100
  type: ClusterIP
